Alteraçoes necessrias para melhor funcionamento e segurança